# ModelPredictionApplication

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: README.md  __init__.py  main.py
data/: README.md
docs/: 00-Project-Tracker.md  00-principios.md  01-modelo.md  03-Variables.md  04-Algoritmo.md  04-Backroll.md  04-Base-de-Conocimiento.md  05-Base-de-Conocimiento.md  06-Auditoria.md  06-Flujo-Operacional.md  06-predicciones.md  07-aprendizaje.md  08-Versiones.md  09-Roadmap.md  10-Glosario.md  14-Prediction-Pipeline.md  15-Capa-de-Preparacion-de-Variables.md  16-Contrato-Oficial-de-Variables.md  17-Matriz-de-Consumo-de-Variables.md  18-Plan-de-Reconciliacion-Arquitectonica.md  19-Architecture-Freeze-Review.md  20-Plan-de-Reconciliacion-de-Gobernanza-Documental.md  21-Constitucion-del-Modelo-Santiago.md  22-Manual-Operativo-del-Arquitecto-IA.md  23-Plan-Maestro-de-Reconciliacion-Operativa.md  24-Analisis-Arquitectonico-INC-04-INC-05.md  25-Trazado-de-Ejecucion-del-Prediction-Pipeline.md  26-Runtime-del-Modelo.md  27-Auditoria-de-Variables-Pendientes.md  28-Catalogo-de-Variables-Derivadas.md  29-Arquitectura-del-Runtime.md  30-Contrato-Oficial-del-Prediction-Context.md  31-Modelo-Fisico-de-la-Base-de-Conocimiento.md  32-Modelo-Relacional-Oficial.md  33-Modelo-Fisico-PostgreSQL.md  34-Decision-Oficial-del-Stack-Tecnologico.md  35-Arquitectura-Oficial-del-Proyecto-Python.md  99-Mapa-Maestro.md
engine/: 01-Offensive-Strength.md  02-Defensive-Strength.md  03-Poisson.md  04-Chaos-Index.md  05-Confidence.md  06-Expected-Value.md
learning/: README.md  confidence-calibration.md  error-analysis.md  pattern-discovery.md  version-history.md  weight-adjustment.md
(+80 files in other folders)
